--- a/style/index.less
+++ b/style/index.less
@@ -14,10 +14,10 @@ div#app {
     display: flex;
     flex-direction: column;
   }
+  
+  div.timeline_markers {
+    max-height: 29em;
+    overflow-y: auto;
+  }
 }
 
-#map {
-  height: 500px;
-  width: 500px;
-  /* border-radius: 100%; */
-}
