update deps, add zoom in timeline

--- a/style/index.less
+++ b/style/index.less
@@ -18,6 +18,10 @@ div#app {
   div.timeline_markers {
     max-height: 29em;
     overflow-y: auto;
+    input {
+      width: 7em;
+      margin: 0 0.5em;
+    }
   }
 }
 
